--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 
 html,body{
     height: 100%;
+    background-color: #0e0e0e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container{
-    width: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
